--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.4.3</version>
                 <configuration>
-                    <outputDirectory>C://Documents and Settings/${user.name}/Desktop/time</outputDirectory>
+                    <outputDirectory>C://Documents and Settings/${user.name}/Desktop/Licznik</outputDirectory>
                     <filters>
                         <filter>
                             <artifact>*:*</artifact>
@@ -37,11 +37,11 @@
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <!-- your main class: -->
-                            <mainClass>panel.run.Main</mainClass>
+                            <mainClass>core.run.Main</mainClass>
                         </transformer>
                     </transformers>
                     <!-- put your configurations here -->
-                    <finalName>AutomaticTests</finalName>
+                    <finalName>TurboLicznik</finalName>
                 </configuration>
                 <executions>
                     <execution>
