--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.4.3</version>
                 <configuration>
-                    <outputDirectory>C://Documents and Settings/${user.name}/Desktop/Licznik</outputDirectory>
+                    <outputDirectory>C://Documents and Settings/${user.name}/Desktop/time</outputDirectory>
                     <filters>
                         <filter>
                             <artifact>*:*</artifact>
@@ -37,11 +37,11 @@
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <!-- your main class: -->
-                            <mainClass>core.run.Main</mainClass>
+                            <mainClass>core.Main</mainClass>
                         </transformer>
                     </transformers>
                     <!-- put your configurations here -->
-                    <finalName>TurboLicznik</finalName>
+                    <finalName>Run</finalName>
                 </configuration>
                 <executions>
                     <execution>
@@ -49,26 +49,6 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>2.5</version>
-                <executions>
-                    <execution>
-                        <id>auto-clean</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                        <configuration>
-                            <filesets>
-                                <fileset>
-                                    <directory>C://Documents and Settings/${user.name}/Desktop/time</directory>
-                                </fileset>
-                            </filesets>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -98,6 +78,7 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.0-RC3</version>
         </dependency>
+
 
     </dependencies>
 
